//@GeneratedCode
@startuml SEBookStore.Logic.Entities.Book
+class Book #whitesmoke {
    - String iSBNNumber
    - String _author
    - String _title
    - String _description
    - Int32 _yearOfRelease
    - Double _price
    ---
     + String getISBNNumber()
     + setISBNNumber(String value)
     + String getAuthor()
     + setAuthor(String value)
     + String getTitle()
     + setTitle(String value)
     + String getDescription()
     + setDescription(String value)
     + Int32 getYearOfRelease()
     + setYearOfRelease(Int32 value)
     + Double getPrice()
     + setPrice(Double value)
    ---
    + {static}Boolean CheckISBNNumber(String number)
    ---
    + String get_ISBNNumber()
    + Void set_ISBNNumber(String value)
    + String get_Author()
    + Void set_Author(String value)
    + String get_Title()
    + Void set_Title(String value)
    + String get_Description()
    + Void set_Description(String value)
    + Int32 get_YearOfRelease()
    + Void set_YearOfRelease(Int32 value)
    + Double get_Price()
    + Void set_Price(Double value)
    + String ToString()
    + Void Validate(IContext context, EntityState entityState)
}
+abstract class EntityObject #white {
    - Int32 _id
    ---
     + Int32 getId()
     + setId(Int32 value)
    ---
    + Int32 get_Id()
    + Void set_Id(Int32 value)
}
+abstract class DbObject #white {
}
interface IBook #lightgrey {
     + String getISBNNumber()
     + setISBNNumber(String value)
     + String getAuthor()
     + setAuthor(String value)
     + String getTitle()
     + setTitle(String value)
     + String getDescription()
     + setDescription(String value)
     + Int32 getYearOfRelease()
     + setYearOfRelease(Int32 value)
     + Double getPrice()
     + setPrice(Double value)
    ---
    + String get_ISBNNumber()
    + Void set_ISBNNumber(String value)
    + String get_Author()
    + Void set_Author(String value)
    + String get_Title()
    + Void set_Title(String value)
    + String get_Description()
    + Void set_Description(String value)
    + Int32 get_YearOfRelease()
    + Void set_YearOfRelease(Int32 value)
    + Double get_Price()
    + Void set_Price(Double value)
    + Void CopyProperties(IBook other)
}
interface IValidatableEntity #lightgrey {
    + Void Validate(IContext context, EntityState entityState)
}
interface IIdentifiable #lightgrey {
     + Int32 getId()
     + setId(Int32 value)
    ---
    + Int32 get_Id()
    + Void set_Id(Int32 value)
    + Void CopyProperties(IIdentifiable other)
}
EntityObject <|-- Book
DbObject <|-- EntityObject
IIdentifiable <|.. IBook
IBook ()- Book
IValidatableEntity ()- Book
IIdentifiable ()- EntityObject
@enduml
